evaluation/test_suite/negative/ub18/1.c
#include <stdio.h>
int main()
{
    int x = 0;
    int* p = &x + 1 - 1;
    printf("%d\n", *p);
}
